--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-odpowiedzi do laborkow 1
-zadanie 1
-powstalo biblioteka.o
+do zrobienia 2,3,6
+motto na zestaw 5 - It should be noted that no ethically-trained software engineer would ever consent to write a destroy_baghdad procedure. Basic professional ethics would instead require him to write a destroy_city procedure, to which Baghdad could be given as a parameter. — Nathaniel Borenstein
+
+zaden gosc, ktory programuje nigdy nie stworzy czegos takiego jak destroy_bagdad
